--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -90,4 +90,4 @@ frontend
 PyMuPDF==1.21.0
 paddleocr==2.7.3
 paddlepaddle==2.6.1
-# paddlepaddle-gpu==2.6.1
+paddlepaddle-gpu==2.6.1 # Only on platforms with GPU, non-GPU masking out
